--- a/biome.json
+++ b/biome.json
@@ -18,7 +18,8 @@
 		"rules": {
 			"recommended": true,
 			"style": {
-				"useImportType": "off"
+				"useImportType": "off",
+				"noNonNullAssertion": "off"
 			}
 		}
 	},
