--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/node": "^22.10.7",
     "@types/pg": "^8.15.4",
     "@types/supertest": "^6.0.2",
+    "@vitest/coverage-v8": "3.2.4",
+    "@vitest/ui": "3.2.4",
     "drizzle-kit": "^0.31.1",
     "fast-glob": "^3.3.3",
     "globals": "^16.0.0",
