--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["./src/**/*.ts", "vitest.config.ts"]
+		"includes": ["./src/**/*.ts", "vitest.config.ts", "./test/**/*.ts"]
 	},
 	"formatter": {
 		"enabled": true,
