Ajustei o CategoryRepository e criei o CreateCategoryService

--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,9 @@
 			"style": {
 				"useImportType": "off",
 				"noNonNullAssertion": "off"
+			},
+			"suspicious": {
+				"noFocusedTests": "off"
 			}
 		}
 	},
